--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="logo">SKK</div>
         <nav class="menu">
-            <a href="#jaratok">Járataink, Menetrendek</a>
+            <a href="Járataink, Menetrendek.html">Járataink, Menetrendek</a>
             <a href="#forgalmi változások">Forgalmi Változások</a>
             <a href="#jegyek">Jegyek, Bérletek</a>
             <a href="#kapcsolat">Kapcsolat</a>
