--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soproni Közösségi Közlekedés</title>
     <link rel="stylesheet" href="skk.css">
+    <link rel="icon" href="ikon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="ikon.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
